dev and prod application files created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fitstore
-spring.datasource.username=user
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
-
-#api.security.token.secret=
-#api.security.token.issuer=
-
-logging.level.org.springframework.security=DEBUG
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=dev
