User roles for security created

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fitstore
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
-
-#api.security.token.secret=
-#api.security.token.issuer=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.springframework.security=DEBUG
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=${JWT_SECRET}
+jwt.issuer=${JWT_ISSUER}
