--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fitstore
 spring.datasource.username=user
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-logging.level.org.springframework.security=DEBUG
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
 
 jwt.secret=${JWT_SECRET}
 jwt.issuer=${JWT_ISSUER}
